Fixing the dropdown align text

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -41,7 +41,7 @@
 	outline: none;
 	width: 100%;
 	font-family: inherit;
-	text-align: right;
+	text-align: left;
 }
 
 .dropElement:hover{
